# my-bevy-test

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: main.rs  state.rs
src/component/: cameralight.rs  mod.rs  selected.rs
src/event/: inputevent.rs  mod.rs
src/plugin/: gameplugin.rs  mod.rs
src/resource/: cameraposition.rs  data.rs  inputcommands.rs  mod.rs
src/system/: cameramovement.rs  camerapositioning.rs  cubespawner.rs  eventprint.rs  ingamesetup.rs  menusetup.rs  mod.rs  movement.rs  selectionhandler.rs  setup.rs  userinput.rs
