[package]
name = "my_bevy_game"
version = "0.1.0"
authors = ["Simon Goller <neosam+github@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_audio",
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/bevy_wgpu",
    "bevy/render",
    # "bevy/dynamic_plugins",
    "bevy/png",
    "bevy/hdr",
    "bevy/mp3",
    "bevy/x11",
]

# cargo build --target wasm32-unknown-unknown --no-default-features --features web
# wasm-bindgen --out-dir target --out-name wasm --target web --no-typescript target/wasm32-unknown-unknown/debug/my_bevy_game.wasm
web = [
    "bevy_webgl2",
    #"bevy/bevy_audio",
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    #"bevy/dynamic_plugins",
    "bevy/png",
    "bevy/hdr",
    #"bevy/mp3",
    #"bevy/x11",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_webgl2 = { version = "0.5.0", optional = true }
wasm-bindgen-cli = "0.2"